[TP] Update to Eclipse Passage 4.0.0 and Eclipse SimRel 2024-12
Adapt to the introduction of the new FeatureIdentifier type:
- https://github.com/eclipse-passage/passage/pull/1454